[gd_scene load_steps=14 format=3 uid="uid://d042m0mh70v0e"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_ghd4d"]
[ext_resource type="PackedScene" uid="uid://dm8kloddub4r" path="res://Scenes/player.tscn" id="2_4fo8l"]
[ext_resource type="PackedScene" uid="uid://nioaoo781fvn" path="res://Scenes/bg.tscn" id="2_r0p1v"]
[ext_resource type="Texture2D" uid="uid://cph7hrxt3dg5i" path="res://Assets/textures/bg/Gray.png" id="3_cyasy"]
[ext_resource type="PackedScene" uid="uid://bxmlfmvahquuy" path="res://Scenes/saw_ball.tscn" id="4_0rnon"]
[ext_resource type="PackedScene" uid="uid://dmkdk1w45doo2" path="res://Scenes/jump_pad.tscn" id="4_edyb0"]
[ext_resource type="PackedScene" uid="uid://m4bfaaleing8" path="res://Scenes/spike_ball.tscn" id="5_84gj3"]
[ext_resource type="PackedScene" uid="uid://dkak3svr6khj3" path="res://Scenes/tile_map.tscn" id="7_04l3b"]
[ext_resource type="PackedScene" uid="uid://v53q03vq2c1g" path="res://Scenes/start_point.tscn" id="9_a3q06"]
[ext_resource type="PackedScene" uid="uid://v0tenuobfp3" path="res://Scenes/end_level.tscn" id="10_ktpgl"]
[ext_resource type="PackedScene" uid="uid://id5efps34skn" path="res://Scenes/check_point.tscn" id="11_qh8go"]
[ext_resource type="PackedScene" uid="uid://dheaiv041bswr" path="res://Scenes/gold_coin.tscn" id="12_qme6m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kan0u"]
size = Vector2(2643.25, 35)

[node name="Level" type="Node2D"]
script = ExtResource("1_ghd4d")

[node name="BG" parent="." instance=ExtResource("2_r0p1v")]
bg_texture = ExtResource("3_cyasy")

[node name="Player" parent="." instance=ExtResource("2_4fo8l")]
position = Vector2(172, 133)

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(-37, 275)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(1219, -49)
shape = SubResource("RectangleShape2D_kan0u")

[node name="Traps" type="Node2D" parent="."]

[node name="SawBall2" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(326, -5)

[node name="SawBall3" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(501, -8)

[node name="SawBall4" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(755, 123)

[node name="SawBall5" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(797, 124)

[node name="SawBall7" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1492, 8)

[node name="SawBall8" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1491, -69)

[node name="SawBall10" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1491, -277)

[node name="SawBall15" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1492, -317)

[node name="SawBall11" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1491, -234)

[node name="SawBall12" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1493, -193)

[node name="SawBall13" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1492, -151)

[node name="SawBall14" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1492, -110)

[node name="SawBall16" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1778, -92)

[node name="SawBall23" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1635, 51)

[node name="SawBall17" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1173, -18)

[node name="SawBall21" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1184, 98)

[node name="SawBall22" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1371, 99)

[node name="SawBall18" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(934, -22)

[node name="SawBall20" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1301, -19)

[node name="SawBall19" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(805, -22)

[node name="SawBall9" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(1492, -31)

[node name="SawBall6" parent="Traps" instance=ExtResource("4_0rnon")]
position = Vector2(837, 125)

[node name="SpikeBall" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(259, 87)

[node name="SpikeBall3" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(259, 116)

[node name="SpikeBall4" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(259, 144)

[node name="SpikeBall9" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(259, 59)

[node name="SpikeBall10" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(258, 31)

[node name="SpikeBall11" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(433, 81)

[node name="SpikeBall12" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(511, 82)

[node name="SpikeBall14" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(1185, 146)

[node name="SpikeBall15" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(1277, 147)

[node name="SpikeBall18" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(1669, -106)
rotation = 1.5708

[node name="SpikeBall20" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(1545, 22)
rotation = 1.5708

[node name="SpikeBall16" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(1230, 147)

[node name="SpikeBall13" parent="Traps" instance=ExtResource("5_84gj3")]
position = Vector2(473, 80)

[node name="Objects" type="Node2D" parent="."]

[node name="JumpPad2" parent="Objects" instance=ExtResource("4_edyb0")]
position = Vector2(176, 68)

[node name="JumpPad4" parent="Objects" instance=ExtResource("4_edyb0")]
position = Vector2(1105, 145)

[node name="JumpPad6" parent="Objects" instance=ExtResource("4_edyb0")]
position = Vector2(893, 129)

[node name="JumpPad8" parent="Objects" instance=ExtResource("4_edyb0")]
position = Vector2(831, 62)

[node name="JumpPad9" parent="Objects" instance=ExtResource("4_edyb0")]
position = Vector2(798, 81)

[node name="JumpPad7" parent="Objects" instance=ExtResource("4_edyb0")]
position = Vector2(865, 93)

[node name="JumpPad3" parent="Objects" instance=ExtResource("4_edyb0")]
position = Vector2(66, 153)

[node name="TileMap" parent="." instance=ExtResource("7_04l3b")]
position = Vector2(-17, 0)
layer_0/tile_data = PackedInt32Array(327708, 1179648, 0, 327709, 1245184, 0, 327710, 1114112, 0, 327711, 1179648, 0, 327712, 1245184, 0, 327713, 1114112, 0, 327714, 1179648, 0, 327715, 1245184, 0, 327716, 1114112, 0, 327717, 1179648, 0, 327718, 1245184, 0, 327689, 458752, 2, 327690, 458752, 2, 327691, 458752, 2, 327688, 393216, 2, 327692, 524288, 2, 65550, 1310720, 4, 131086, 1310720, 5, 65551, 1376256, 4, 131087, 1376256, 5, -65520, 1310720, 4, 16, 1310720, 5, -65519, 1376256, 4, 17, 1376256, 5, -65518, 1310720, 4, 18, 1310720, 5, -65517, 1376256, 4, 19, 1376256, 5, -65513, 1310720, 4, 23, 1310720, 5, -65512, 1376256, 4, 24, 1376256, 5, -65511, 1310720, 4, 25, 1310720, 5, 26, 1376256, 5, -65510, 1376256, 4, -65509, 65536, 4, -65508, 65536, 4, -65507, 65536, 4, -65506, 65536, 4, -65502, 65536, 4, -65501, 65536, 4, -65500, 65536, 4, -65499, 65536, 4, -65498, 1310720, 4, 38, 1310720, 5, -65497, 1376256, 4, 39, 1376256, 5, -65496, 1310720, 4, 40, 1310720, 5, -65493, 1376256, 4, 43, 1376256, 5, -65492, 1310720, 4, 44, 1310720, 5, 589871, 65536, 10, 589872, 65536, 10, 589873, 65536, 10, 589874, 65536, 10, 589875, 65536, 10, 589876, 65536, 10, 589877, 65536, 10, 589879, 65536, 10, 589880, 65536, 10, 589881, 65536, 10, 524334, 0, 9, 589870, 0, 10, 458798, 0, 9, 393262, 0, 9, 524346, 131072, 9, 589882, 131072, 10, 458810, 131072, 9, 393274, 131072, 9, 45, 1310720, 4, 47, 1310720, 4, 46, 1310720, 4, 48, 1310720, 4, 327725, 786432, 0, 327726, 851968, 0, 393260, 786432, 0, 393261, 851968, 0, 458795, 786432, 0, 458796, 851968, 0, 524330, 786432, 0, 524331, 851968, 0, 589865, 786432, 0, 589866, 851968, 0, 589867, 851968, 0, 589868, 851968, 0, 589869, 851968, 0, 524332, 851968, 0, 524333, 851968, 0, 458797, 851968, 0, 49, 1310720, 4, 53, 1310720, 4, 54, 1310720, 4, 55, 1310720, 4, 56, 1310720, 4, 57, 1310720, 4, 61, 1310720, 4, 62, 1310720, 4, 63, 1310720, 4, 64, 1310720, 4, 65, 1310720, 4, 66, 1310720, 4, 67, 1310720, 4, 68, 1310720, 4, 69, 1310720, 4, 70, 1310720, 4, 71, 1310720, 4, 72, 1310720, 4, 76, 1310720, 4, 77, 1310720, 4, 78, 1310720, 4, 79, 1310720, 4, 80, 1310720, 4, 84, 1310720, 4, 85, 1310720, 4, 86, 1310720, 4, 87, 1310720, 4, 88, 1310720, 4, 89, 1310720, 4, 90, 1310720, 4, 91, 1310720, 4, 92, 1310720, 4, 50, 1179648, 5, 51, 1179648, 5, 52, 1179648, 5, 58, 1179648, 5, 59, 1179648, 5, 60, 1179648, 5, 393291, 1114112, 1, 393292, 1179648, 1, 393293, 1245184, 1, 393294, 1114112, 1, 393295, 1179648, 1, 393296, 1245184, 1, 393297, 1114112, 1, 393298, 1179648, 1, 393299, 1245184, 1, 393300, 1114112, 1, 393301, 1179648, 1, 393302, 1245184, 1, 589899, 1114112, 0, 589900, 1179648, 0, 589901, 1245184, 0, 589902, 1114112, 0, 589903, 1179648, 0, 589904, 1245184, 0, 589905, 1114112, 0, 589906, 1179648, 0, 589907, 1245184, 0, 589908, 1114112, 0, 589909, 1179648, 0, 589910, 1245184, 0, 589920, 786432, 4, 589921, 851968, 4, 458850, 786432, 4, 458851, 851968, 4, 589922, 851968, 4, 589923, 851968, 4, 327780, 786432, 4, 327781, 851968, 4, 196710, 786432, 4, 196711, 851968, 4, 458852, 851968, 4, 327782, 851968, 4, 196712, 851968, 4, 589924, 851968, 4, 589925, 851968, 4, 589926, 851968, 4, 589927, 851968, 4, 589928, 851968, 4, 458853, 851968, 4, 458854, 851968, 4, 458855, 851968, 4, 458856, 851968, 4, 327783, 851968, 4, 327784, 851968, 4, 65640, 786432, 4, 65641, 851968, 4, -65430, 786432, 4, -65429, 851968, 4, -196500, 786432, 4, -196499, 851968, 4, -327570, 786432, 4, 589929, 851968, 4, 458857, 851968, 4, 327785, 851968, 4, 196713, 851968, 4, -196498, 851968, 4, -65426, 851968, 4, 65646, 851968, 4, 196718, 851968, 4, 327786, 851968, 4, 458858, 851968, 4, 589930, 851968, 4, 327787, 851968, 4, 458859, 851968, 4, 589931, 851968, 4, 327788, 851968, 4, 458860, 851968, 4, 589932, 851968, 4, 327789, 851968, 4, 458861, 851968, 4, 589933, 851968, 4, 327790, 851968, 4, 458862, 851968, 4, 589934, 851968, 4, -65427, 851968, 4, 65645, 851968, 4, 196717, 851968, 4, -65428, 851968, 4, 65644, 851968, 4, 196716, 851968, 4, 65643, 851968, 4, 196715, 851968, 4, 65642, 851968, 4, 196714, 851968, 4, -262035, 1114112, 8, -262034, 1179648, 8, -130962, 1179648, 8, 110, 1179648, 8, 131182, 1179648, 8, 262254, 1179648, 8, 393326, 1179648, 8, 524398, 1179648, 8, 524385, 1114112, 8, 393315, 1114112, 8, 262245, 1114112, 8, 131175, 1114112, 8, 105, 1114112, 8, -130965, 1114112, 8, -130964, 1179648, 8, -130963, 1179648, 8, 106, 1179648, 8, 107, 1179648, 8, 108, 1179648, 8, 109, 1179648, 8, 131176, 1179648, 8, 131177, 1179648, 8, 131178, 1179648, 8, 131179, 1179648, 8, 131180, 1179648, 8, 131181, 1179648, 8, 262246, 1179648, 8, 262247, 1179648, 8, 262248, 1179648, 8, 262249, 1179648, 8, 262250, 1179648, 8, 262251, 1179648, 8, 262252, 1179648, 8, 262253, 1179648, 8, 393316, 1179648, 8, 393317, 1179648, 8, 393318, 1179648, 8, 393319, 1179648, 8, 393320, 1179648, 8, 393321, 1179648, 8, 393322, 1179648, 8, 393323, 1179648, 8, 393324, 1179648, 8, 393325, 1179648, 8, 524386, 1179648, 8, 524387, 1179648, 8, 524388, 1179648, 8, 524389, 1179648, 8, 524390, 1179648, 8, 524391, 1179648, 8, 524392, 1179648, 8, 524393, 1179648, 8, 524394, 1179648, 8, 524395, 1179648, 8, 524396, 1179648, 8, 524397, 1179648, 8, 73, 1310720, 4, 74, 1310720, 4, 75, 1310720, 4, 81, 1310720, 4, 82, 1310720, 4, 83, 1310720, 4, -393105, 1114112, 8, -393104, 1179648, 8, -458640, 786432, 4, -393103, 1245184, 8, -327569, 851968, 4, -327568, 851968, 4, -196497, 851968, 4, -196496, 851968, 4, -65425, 851968, 4, -65424, 851968, 4, 65647, 851968, 4, 65648, 851968, 4, 196719, 851968, 4, 196720, 851968, 4, 327791, 851968, 4, 327792, 851968, 4, 458863, 851968, 4, 458864, 851968, 4, 589935, 851968, 4, 589936, 851968, 4, -262033, 1179648, 8, -262032, 1179648, 8, -130961, 1179648, 8, -130960, 1179648, 8, 111, 1179648, 8, 112, 1179648, 8, 131183, 1179648, 8, 131184, 1179648, 8, 262255, 1179648, 8, 262256, 1179648, 8, 393327, 1179648, 8, 393328, 1179648, 8, 524399, 1179648, 8, 524400, 1179648, 8, 589937, 917504, 4, 458865, 917504, 4, 327793, 917504, 4, 196721, 917504, 4, 65649, 917504, 4, -65423, 917504, 4, -196495, 917504, 4, -327567, 917504, 4, -262031, 1245184, 8, -130959, 1245184, 8, 113, 1245184, 8, 131185, 1245184, 8, 262257, 1245184, 8, 393329, 1245184, 8, 524401, 1245184, 8, -458639, 917504, 4, 524402, 851968, 9, 589938, 851968, 10, 393330, 851968, 9, 458866, 851968, 10, 262258, 851968, 9, 327794, 851968, 10, 131186, 851968, 9, 196722, 851968, 10, 114, 851968, 9, 65650, 851968, 10, -130958, 851968, 9, -65422, 851968, 10, -262030, 851968, 9, -196494, 851968, 10, -393102, 851968, 9, -327566, 851968, 10, -393101, 917504, 9, -327565, 917504, 10, -262029, 917504, 9, -196493, 917504, 10, -130957, 917504, 9, -65421, 917504, 10, 115, 917504, 9, 65651, 917504, 10, 131187, 917504, 9, 196723, 917504, 10, 262259, 917504, 9, 327795, 917504, 10, 393331, 917504, 9, 458867, 917504, 10, 524403, 917504, 9, 589939, 917504, 10, -458638, 786432, 8, -393100, 851968, 9, -327564, 851968, 10, -393099, 917504, 9, -327563, 917504, 10, -262028, 851968, 9, -196492, 851968, 10, -262027, 917504, 9, -196491, 917504, 10, -130956, 851968, 9, -65420, 851968, 10, -130955, 917504, 9, -65419, 917504, 10, 116, 851968, 9, 65652, 851968, 10, 117, 917504, 9, 65653, 917504, 10, 131188, 851968, 9, 196724, 851968, 10, 131189, 917504, 9, 196725, 917504, 10, 262260, 851968, 9, 327796, 851968, 10, 262261, 917504, 9, 327797, 917504, 10, 393332, 851968, 9, 458868, 851968, 10, 393333, 917504, 9, 458869, 917504, 10, 524404, 851968, 9, 589940, 851968, 10, 524405, 917504, 9, 589941, 917504, 10, -458637, 851968, 8, -458636, 851968, 8, -393098, 851968, 9, -327562, 851968, 10, -393097, 917504, 9, -327561, 917504, 10, -262026, 851968, 9, -196490, 851968, 10, -262025, 917504, 9, -196489, 917504, 10, -130954, 851968, 9, -65418, 851968, 10, -130953, 917504, 9, -65417, 917504, 10, 118, 851968, 9, 65654, 851968, 10, 119, 917504, 9, 65655, 917504, 10, 131190, 851968, 9, 196726, 851968, 10, 131191, 917504, 9, 196727, 917504, 10, 262262, 851968, 9, 327798, 851968, 10, 262263, 917504, 9, 327799, 917504, 10, 393334, 851968, 9, 458870, 851968, 10, 393335, 917504, 9, 458871, 917504, 10, 524406, 851968, 9, 589942, 851968, 10, 524407, 917504, 9, 589943, 917504, 10, -393096, 851968, 9, -327560, 851968, 10, -393095, 917504, 9, -327559, 917504, 10, -262024, 851968, 9, -196488, 851968, 10, -262023, 917504, 9, -196487, 917504, 10, -130952, 851968, 9, -65416, 851968, 10, -130951, 917504, 9, -65415, 917504, 10, 120, 851968, 9, 65656, 851968, 10, 121, 917504, 9, 65657, 917504, 10, 131192, 851968, 9, 196728, 851968, 10, 131193, 917504, 9, 196729, 917504, 10, 262264, 851968, 9, 327800, 851968, 10, 262265, 917504, 9, 327801, 917504, 10, 393336, 851968, 9, 458872, 851968, 10, 393337, 917504, 9, 458873, 917504, 10, 524408, 851968, 9, 589944, 851968, 10, 524409, 917504, 9, 589945, 917504, 10, -458631, 917504, 8, -458633, 851968, 8, -458632, 851968, 8, -458635, 851968, 8, -458634, 851968, 8, -524167, 1114112, 9, -589703, 1114112, 9, -589704, 1114112, 9, -524169, 1114112, 9, -589705, 1114112, 9, -524168, 786432, 1, 589878, 65536, 10, 720894, 393216, 0, 786430, 393216, 1, 720895, 458752, 0, 786431, 458752, 1, 655360, 524288, 0, 720896, 524288, 1, 655361, 393216, 0, 720897, 393216, 1, 655362, 458752, 0, 720898, 458752, 1, 655363, 524288, 0, 720899, 524288, 1, 655364, 393216, 0, 720900, 393216, 1, 655365, 458752, 0, 720901, 458752, 1, 655366, 524288, 0, 720902, 524288, 1, 655367, 393216, 0, 720903, 393216, 1, 655368, 458752, 0, 720904, 458752, 1, 655369, 524288, 0, 720905, 524288, 1, 655370, 393216, 0, 720906, 393216, 1, 655371, 458752, 0, 720907, 458752, 1, 655372, 524288, 0, 720908, 524288, 1, 655373, 393216, 0, 720909, 393216, 1, 655374, 458752, 0, 720910, 458752, 1, 655375, 524288, 0, 720911, 524288, 1, 655376, 393216, 0, 720912, 393216, 1, 655377, 458752, 0, 720913, 458752, 1, 655378, 524288, 0, 720914, 524288, 1, 655379, 393216, 0, 720915, 393216, 1, 655380, 458752, 0, 720916, 458752, 1, 655381, 524288, 0, 720917, 524288, 1, 655382, 393216, 0, 720918, 393216, 1, 655383, 458752, 0, 720919, 458752, 1, 655384, 524288, 0, 720920, 524288, 1, 655385, 393216, 0, 720921, 393216, 1, 655386, 458752, 0, 720922, 458752, 1, 655387, 524288, 0, 720923, 524288, 1, 655388, 393216, 0, 720924, 393216, 1, 655389, 458752, 0, 720925, 458752, 1, 655390, 524288, 0, 720926, 524288, 1, 655391, 393216, 0, 720927, 393216, 1, 655392, 458752, 0, 720928, 458752, 1, 655393, 524288, 0, 720929, 524288, 1, 655394, 393216, 0, 720930, 393216, 1, 655395, 458752, 0, 720931, 458752, 1, 655396, 524288, 0, 720932, 524288, 1, 655397, 393216, 0, 720933, 393216, 1, 655398, 458752, 0, 720934, 458752, 1, 655399, 524288, 0, 720935, 524288, 1, 655400, 393216, 0, 720936, 393216, 1, 655401, 458752, 0, 720937, 458752, 1, 655402, 524288, 0, 720938, 524288, 1, 655403, 393216, 0, 720939, 393216, 1, 655404, 458752, 0, 720940, 458752, 1, 655405, 524288, 0, 720941, 524288, 1, 655406, 393216, 0, 720942, 393216, 1, 655407, 458752, 0, 720943, 458752, 1, 655408, 524288, 0, 720944, 524288, 1, 655409, 393216, 0, 720945, 393216, 1, 655410, 458752, 0, 720946, 458752, 1, 655411, 524288, 0, 720947, 524288, 1, 655412, 393216, 0, 720948, 393216, 1, 655413, 458752, 0, 720949, 458752, 1, 655414, 524288, 0, 720950, 524288, 1, 655415, 393216, 0, 720951, 393216, 1, 655416, 458752, 0, 720952, 458752, 1, 655417, 524288, 0, 720953, 524288, 1, 655418, 393216, 0, 720954, 393216, 1, 655419, 458752, 0, 720955, 458752, 1, 655420, 524288, 0, 720956, 524288, 1, 655421, 393216, 0, 720957, 393216, 1, 655422, 458752, 0, 720958, 458752, 1, 655423, 524288, 0, 720959, 524288, 1, 655424, 393216, 0, 720960, 393216, 1, 655425, 458752, 0, 720961, 458752, 1, 655426, 524288, 0, 720962, 524288, 1, 655427, 393216, 0, 720963, 393216, 1, 655428, 458752, 0, 720964, 458752, 1, 655429, 524288, 0, 720965, 524288, 1, 655430, 393216, 0, 720966, 393216, 1, 655431, 458752, 0, 720967, 458752, 1, 655432, 524288, 0, 720968, 524288, 1, 655433, 393216, 0, 720969, 393216, 1, 655434, 458752, 0, 720970, 458752, 1, 655435, 524288, 0, 720971, 524288, 1, 655436, 393216, 0, 720972, 393216, 1, 655437, 458752, 0, 720973, 458752, 1, 655438, 524288, 0, 720974, 524288, 1, 655439, 393216, 0, 720975, 393216, 1, 655440, 458752, 0, 720976, 458752, 1, 655441, 524288, 0, 720977, 524288, 1, 655442, 393216, 0, 720978, 393216, 1, 655443, 458752, 0, 720979, 458752, 1, 655444, 524288, 0, 720980, 524288, 1, 655445, 393216, 0, 720981, 393216, 1, 655446, 458752, 0, 720982, 458752, 1, 655447, 524288, 0, 720983, 524288, 1, 655448, 393216, 0, 720984, 393216, 1, 655449, 458752, 0, 720985, 458752, 1, 655450, 524288, 0, 720986, 524288, 1, 655451, 393216, 0, 720987, 393216, 1, 655452, 458752, 0, 720988, 458752, 1, 655453, 524288, 0, 720989, 524288, 1, 655454, 393216, 0, 720990, 393216, 1, 655455, 458752, 0, 720991, 458752, 1, 655456, 524288, 0, 720992, 524288, 1, 655457, 393216, 0, 720993, 393216, 1, 655458, 458752, 0, 720994, 458752, 1, 655459, 524288, 0, 720995, 524288, 1, 655460, 393216, 0, 720996, 393216, 1, 655461, 458752, 0, 720997, 458752, 1, 655462, 524288, 0, 720998, 524288, 1, 655463, 393216, 0, 720999, 393216, 1, 655464, 458752, 0, 721000, 458752, 1, 655465, 524288, 0, 721001, 524288, 1, 655466, 393216, 0, 721002, 393216, 1, 655467, 458752, 0, 721003, 458752, 1, 655468, 524288, 0, 721004, 524288, 1, 655469, 393216, 0, 721005, 393216, 1, 655470, 458752, 0, 721006, 458752, 1, 655471, 524288, 0, 721007, 524288, 1, 655472, 393216, 0, 721008, 393216, 1, 655473, 458752, 0, 721009, 458752, 1, 655474, 524288, 0, 721010, 524288, 1, 655475, 393216, 0, 721011, 393216, 1, 655476, 458752, 0, 721012, 458752, 1, 655477, 524288, 0, 721013, 524288, 1, 655478, 393216, 0, 721014, 393216, 1, 655479, 458752, 0, 721015, 458752, 1, 655480, 524288, 0, 721016, 524288, 1, 655481, 393216, 0, 721017, 393216, 1, 851966, 393216, 2, 851967, 458752, 2, 786432, 524288, 2, 786433, 393216, 2, 786434, 458752, 2, 786435, 524288, 2, 786436, 393216, 2, 786437, 458752, 2, 786438, 524288, 2, 786439, 393216, 2, 786440, 458752, 2, 786441, 524288, 2, 786442, 393216, 2, 786443, 458752, 2, 786444, 524288, 2, 786445, 393216, 2, 786446, 458752, 2, 786447, 524288, 2, 786448, 393216, 2, 786449, 458752, 2, 786450, 524288, 2, 786451, 393216, 2, 786452, 458752, 2, 786453, 524288, 2, 786454, 393216, 2, 786455, 458752, 2, 786456, 524288, 2, 786457, 393216, 2, 786458, 458752, 2, 786459, 524288, 2, 786460, 393216, 2, 786461, 458752, 2, 786462, 524288, 2, 786463, 393216, 2, 786464, 458752, 2, 786465, 524288, 2, 786466, 393216, 2, 786467, 458752, 2, 786468, 524288, 2, 786469, 393216, 2, 786470, 458752, 2, 786471, 524288, 2, 786472, 393216, 2, 786473, 458752, 2, 786474, 524288, 2, 786475, 393216, 2, 786476, 458752, 2, 786477, 524288, 2, 786478, 393216, 2, 786479, 458752, 2, 786480, 524288, 2, 786481, 393216, 2, 786482, 458752, 2, 786483, 524288, 2, 786484, 393216, 2, 786485, 458752, 2, 786486, 524288, 2, 786487, 393216, 2, 786488, 458752, 2, 786489, 524288, 2, 786490, 393216, 2, 786491, 458752, 2, 786492, 524288, 2, 786493, 393216, 2, 786494, 458752, 2, 786495, 524288, 2, 786496, 393216, 2, 786497, 458752, 2, 786498, 524288, 2, 786499, 393216, 2, 786500, 458752, 2, 786501, 524288, 2, 786502, 393216, 2, 786503, 458752, 2, 786504, 524288, 2, 786505, 393216, 2, 786506, 458752, 2, 786507, 524288, 2, 786508, 393216, 2, 786509, 458752, 2, 786510, 524288, 2, 786511, 393216, 2, 786512, 458752, 2, 786513, 524288, 2, 786514, 393216, 2, 786515, 458752, 2, 786516, 524288, 2, 786517, 393216, 2, 786518, 458752, 2, 786519, 524288, 2, 786520, 393216, 2, 786521, 458752, 2, 786522, 524288, 2, 786523, 393216, 2, 786524, 458752, 2, 786525, 524288, 2, 786526, 393216, 2, 786527, 458752, 2, 786528, 524288, 2, 786529, 393216, 2, 786530, 458752, 2, 786531, 524288, 2, 786532, 393216, 2, 786533, 458752, 2, 786534, 524288, 2, 786535, 393216, 2, 786536, 458752, 2, 786537, 524288, 2, 786538, 393216, 2, 786539, 458752, 2, 786540, 524288, 2, 786541, 393216, 2, 786542, 458752, 2, 786543, 524288, 2, 786544, 393216, 2, 786545, 458752, 2, 786546, 524288, 2, 786547, 393216, 2, 786548, 458752, 2, 786549, 524288, 2, 786550, 393216, 2, 786551, 458752, 2, 786552, 524288, 2, 786553, 393216, 2)

[node name="StartPoint" parent="." instance=ExtResource("9_a3q06")]
position = Vector2(-25, 127)

[node name="EndLevel" parent="." instance=ExtResource("10_ktpgl")]
position = Vector2(1846, -145)

[node name="CheckPoints" type="Node2D" parent="."]

[node name="CheckPoint" parent="CheckPoints" groups=["checkpoint"] instance=ExtResource("11_qh8go")]
position = Vector2(975, 127)

[node name="CheckPoint2" parent="CheckPoints" groups=["checkpoint"] instance=ExtResource("11_qh8go")]
position = Vector2(1049, -31)

[node name="Collectibles" type="Node" parent="."]

[node name="GoldCoin" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(464, 148)

[node name="GoldCoin4" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1323, 85)

[node name="GoldCoin15" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1954, -122)

[node name="GoldCoin9" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1362, -12)

[node name="GoldCoin16" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1417, -13)

[node name="GoldCoin14" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1485, 149)

[node name="GoldCoin21" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(362, 145)

[node name="GoldCoin22" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1448, 148)

[node name="GoldCoin10" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(870, -13)

[node name="GoldCoin11" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(989, -12)

[node name="GoldCoin17" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1058, -23)

[node name="GoldCoin12" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1118, -12)

[node name="GoldCoin13" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1236, -13)

[node name="GoldCoin5" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1279, 84)

[node name="GoldCoin6" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1229, 84)

[node name="GoldCoin7" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(736, -13)

[node name="GoldCoin8" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(411, 147)

[node name="GoldCoin2" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(509, 146)
metadata/_edit_group_ = true

[node name="GoldCoin3" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(559, 147)

[node name="GoldCoin23" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(1036, 144)

[node name="GoldCoin18" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(444, -27)

[node name="GoldCoin19" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(386, -27)

[node name="GoldCoin20" parent="Collectibles" instance=ExtResource("12_qme6m")]
position = Vector2(568, -27)

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="JumpPadTriggered" from="Objects/JumpPad2" to="." method="_on_jump_pad_jump_pad_triggered"]
[connection signal="JumpPadTriggered" from="Objects/JumpPad4" to="." method="_on_jump_pad_jump_pad_triggered"]
[connection signal="JumpPadTriggered" from="Objects/JumpPad6" to="." method="_on_jump_pad_jump_pad_triggered"]
[connection signal="JumpPadTriggered" from="Objects/JumpPad8" to="." method="_on_jump_pad_jump_pad_triggered"]
[connection signal="JumpPadTriggered" from="Objects/JumpPad9" to="." method="_on_jump_pad_jump_pad_triggered"]
[connection signal="JumpPadTriggered" from="Objects/JumpPad7" to="." method="_on_jump_pad_jump_pad_triggered"]
[connection signal="JumpPadTriggered" from="Objects/JumpPad3" to="." method="_on_jump_pad_jump_pad_triggered"]
